css/lucyredesign.webflow.css
/* ... */
.image-14 {
    margin-right: 0px;
    margin-left: 0px;
}

.div-block-2 {
    position: fixed;
    left: 0%;
    top: 0%;
    right: 0%;
    height: 60px;
    background-color: #121212;
}

.hidden {
    margin: 37px 200px 0px;
    font-family: 'IBM Plex Mono', sans-serif;
    color: #fff;
}

.hiddentitle {
    margin-top: 93px;
    margin-right: 200px;
    margin-left: 200px;
    font-family: 'IBM Plex Mono', sans-serif;
    color: #fff;
    font-size: 40px;
    line-height: 51px;
    font-weight: 500;
    text-align: left;
}

.p3cap {
    margin-right: 200px;
    margin-bottom: -2px;
    margin-left: 200px;
    padding-top: 0px;
    font-family: 'IBM Plex Mono', sans-serif;
    color: #aaa;
    font-size: 12px;
    text-align: center;
}

.gallery {
    margin-top: 93px;
    margin-right: 200px;
    margin-left: 200px;
}

.galleryafter {
    margin-top: 20px;
    margin-right: 200px;
    margin-left: 200px;
}

.galcap {
    margin-top: 6px;
    font-family: 'IBM Plex Mono', sans-serif;
    color: #e9e9e9;
    font-size: 12px;
}

.galcon {
    margin-right: 200px;
    margin-left: 200px;
}

.image-15 {
    margin-top: 20px;
}

.gallerylast {
    margin-top: 20px;
    margin-right: 200px;
    margin-left: 200px;
}

.image-16 {
    margin-top: 20px;
}

.body-copy {
    overflow: visible;
    padding-top: 0px;
    padding-right: 0px;
    padding-left: 0px;
    background-color: #181818;
}

.moreabout-copy {
    margin: 50px 200px 19px;
    font-family: 'Eina 01', sans-serif;
    color: #fff;
    text-align: left;
}

.columns-7 {
    margin-top: 93px;
    margin-right: 200px;
    margin-left: 200px;
}

.text-block-3-copy {
    color: #fff;
}

.div-block-2-copy {
    position: static;
}

.firstrow {
    margin-bottom: 15px;
}

.columns-75 {
    margin-top: 0px;
    margin-right: 200px;
    margin-left: 200px;
}

.left {
    position: fixed;
    left: 0%;
    top: 0%;
    right: auto;
    bottom: 0%;
    z-index: 0;
    display: inline;
    overflow: visible;
    width: 40%;
    height: auto;
    min-height: auto;
    margin-top: 0px;
    float: right;
    clear: none;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    background-color: #000;
}

.body-2 {
    overflow: hidden;
    background-color: #fff;
}

.div-block-6 {
    position: fixed;
    height: 17vh;
    margin-top: 141px;
    margin-left: 42px;
}

.text-block-4 {
    color: #fff;
}

.text-block-4:hover {
    font-family: 'Eina 01', sans-serif;
    font-style: italic;
}

.text-block-4a {
    padding-left: 29px;
    color: #fff;
}

.text-block-4a:hover {
    font-style: italic;
}

.nice.w--current {
    color: #7f69ff;
    font-style: normal;
    text-decoration: overline;
}

.leftwrapper {
    position: fixed;
    left: 0%;
    top: 0%;
    right: auto;
    bottom: 0%;
    display: block;
    width: 40%;
}

.rightwrapper {
    position: fixed;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: 0%;
    width: 60%;
}

.div-block-7 {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: 0%;
    width: 60%;
}

.body-3 {
    background-color: #121212;
    font-family: 'IBM Plex Mono', sans-serif;
    color: #fff;
}

.title {
    position: absolute;
    left: auto;
    top: 10%;
    right: 0%;
    bottom: auto;
    margin-top: 0px;
    margin-left: 0px;
    float: right;
    font-family: 'IBM Plex Mono', sans-serif;
    color: #fff;
    font-size: 20px;
}

.leftbar {
    position: fixed;
    left: 0%;
    top: 0%;
    right: auto;
    bottom: 0%;
    overflow: visible;
    width: 20%;
    margin-right: 0px;
    margin-left: 0px;
    padding-right: 0px;
}

.leftnav {
    margin-top: 0px;
    margin-bottom: 5px;
    margin-left: 0px;
    padding-top: 0px;
    float: none;
    -webkit-box-ordinal-group: 2;
    -webkit-order: 1;
    -ms-flex-order: 1;
    order: 1;
    -webkit-box-flex: 0;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    font-family: 'IBM Plex Mono', sans-serif;
    color: #fff;
    text-align: right;
    display: block;
    transition: all 0.4s ease-in-out;
}

.leftnav:before {
    height: 8px;
    width: 8px;
    background-color: #c6ff00;
    border-radius: 50%;
    content: '';
    display: block;
    opacity: 0;
}

.leftnav.active:before {
    opacity: 100;
}

.leftnav:hover {
    color: #0df;
    text-decoration: overline;
    font-weight: 800;
}

.leftnav.bottom {
    margin-bottom: 0px;
}

.allleftnav {
    position: absolute;
    left: auto;
    top: auto;
    right: 0%;
    bottom: 10%;
    display: block;
    margin-top: 450px;
    margin-bottom: 2vh;
    float: right;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
}

.right {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: 0%;
    display: block;
    width: 80%;
    height: auto;
    padding: 0 6vw;
    margin: 10vh 0;
    float: right;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -webkit-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
    -webkit-align-content: flex-start;
    -ms-flex-line-pack: start;
    align-content: flex-start;
    background-color: inherit;
}
/* ... */

